--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "@fortawesome/free-brands-svg-icons": "^6.5.1",
         "@fortawesome/free-solid-svg-icons": "^6.5.1",
         "@fortawesome/vue-fontawesome": "^3.0.6",
+        "@vueform/vueform": "^1.9.2",
         "bootstrap": "^5.3.2",
-        "vue-router": "^4.2.5"
+        "vue-router": "^4.3.0",
+        "yup": "^1.4.0"
     }
 }
